--- a/LCM/home.html
+++ b/LCM/home.html
@@ -13,14 +13,29 @@
         .back{
             margin-top: 20%;
         }
+        .text{
+            font-size: 30px;
+        }
+        img .ig{
+            width:200px;
+        }
+        @media only screen and (max-device-width:300px){
+            .text{
+                font-size: 10px;
+            }
+            img.ig{
+            width:100px;
+            margin-top: 20%;
+        }
+        }
     </style>
   </head>
   <body>
     <div class="container">
         <div class="row">
-            <div class="col-4 offset-4 text-white back text-center">
-                <img src="g5.gif" alt="animated gif" style="width:200px">
-                <h4>Sama-sama LCM 🤙</h4>
+            <div class="col-sm-1 offset-sm-0 col-md-4 offset-md-4 text-white back text-center">
+                <img class="ig" src="g5.gif" alt="animated gif">
+                <p class="text">Sama-sama LCM 🤙</p>
 
             </div>
         </div>
