--- a/LCM/home.html
+++ b/LCM/home.html
@@ -26,6 +26,8 @@
             img.ig{
             width:100px;
             margin-top: 20%;
+              margin-left: auto;
+            margin-right: auto;
         }
         }
     </style>
