--- a/LCM/home.html
+++ b/LCM/home.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-sm-1 offset-sm-0 col-md-4 offset-md-4 text-white back text-center">
                 <img class="ig" src="g5.gif" alt="animated gif">
-                <p class="text">Sama-sama LCM 🤙</p>
+                <p class="text">HBD semoga apa yang diharapkan terkabul dan diridhoi Allah SWT 🤙</p>
 
             </div>
         </div>
