--- a/LCM/mbdep.html
+++ b/LCM/mbdep.html
@@ -15,8 +15,8 @@ body{background-image: url("https://i.postimg.cc/pLd7XMrW/wallpaper.jpg");backgr
 
 <div id="bodyblur"></div>
 <div id="konten"><div id="fotoloveu"><div class="image">
- <img class="ig" src="g5.gif" alt="animated gif">
 <!-- Foto Akhir --><img src="https://i.postimg.cc/Rhzfr0FG/hbd.gif" id="animasi" width="130px" height="130px"/></div></div>
+<div><img class="ig" src="g5.gif" alt="animated gif"></div>
 
 <p class='catatan' id='koteks'>
 <marquee scrollamount="8" id="marq"><i id="spasi"></i>
