--- a/LCM/mbdep.html
+++ b/LCM/mbdep.html
@@ -14,9 +14,16 @@ body{background-image: url("https://i.postimg.cc/pLd7XMrW/wallpaper.jpg");backgr
 </style>
 
 <div id="bodyblur"></div>
-<div id="konten"><div id="fotoloveu"><div class="image">
-<!-- Foto Akhir --><img src="https://i.postimg.cc/Rhzfr0FG/hbd.gif" id="animasi" width="130px" height="130px"/></div></div>
-<div><img class="ig" src="g5.gif" alt="animated gif"></div>
+<div id="konten">
+<div id="fotoloveu">
+    <div class="image">
+        <img src="https://i.postimg.cc/Rhzfr0FG/hbd.gif" id="animasi" width="130px" height="130px"/><br>
+
+    </div>
+    <div class="div">
+        <img class="ig" style="margin-top: 30%;" src="g5.gif" alt="animated gif">
+    </div>
+</div>
 
 <p class='catatan' id='koteks'>
 <marquee scrollamount="8" id="marq"><i id="spasi"></i>
