--- a/LCM/index.html
+++ b/LCM/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Sleepy Cat Animation</title>
         <!-- Stylesheet -->
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="https://alfinsihab1.github.io/lope/LCM/style.css" />
     </head>
     <body>
         <div class="container">
