--- a/LCM/wisuda.html
+++ b/LCM/wisuda.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-sm-1 offset-sm-0 col-md-4 offset-md-4 text-white back text-center">
                 <img class="ig" src="g5.gif" alt="animated gif">
-                <p class="text">Selamat untuk atas wisuda dan perjuanganmu selama ini, Semoga ilmunya berkah dan bermanfaat dan segera nyebar undangan 🤙</p>
+                <p class="text">Selamat untuk atas kelulusan dan perjuanganmu selama ini, Semoga ilmunya berkah dan bermanfaat dan segera nyebar undangan 🤙</p>
 
             </div>
         </div>
