--- a/LCM/flower/index.html
+++ b/LCM/flower/index.html
@@ -12,7 +12,7 @@
 <body class="not-loaded">
     <!-- <div class="night"></div> -->
     <div class="flowers">
-      <p class="tulisan">This is Flowers for you. semangat kerjanya Bu guru 💕 </p>
+      <p class="tulisan">This is Flowers for you. semangat kerjanya Bu guru </p>
 
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
