--- a/LCM/flower/index.html
+++ b/LCM/flower/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" type="text/javascript"></script>
-    <title>Flowers For Luluk</title>
+    <title>Flowers For Hilmia</title>
 </head>
     
 <body class="not-loaded">
     <!-- <div class="night"></div> -->
     <div class="flowers">
-      <p class="tulisan">This is Flowers for you. semangat kerjanya Bu guru </p>
+      <p class="tulisan">This is Flowers for you. semangat Beraktifitas ea ea ea </p>
 
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
